[tool.poetry]
name = "repl_python3_DiscordBot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
#youtube_dl = "^2021.6.6"
replit = "^3.2.4"
strings-pkg = "^0.0.1"
gTTS = "^2.2.4"
mutagen = "^1.45.1"
configparser = "^5.2.0"
pyimgur = "^0.6.0"
"discord.py" = "^2.0.0"
PyNaCl = "^1.5.0"
"backports.zoneinfo" = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
